--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -25,7 +25,7 @@ jQuery.extend(XF.config, {
 		<xf:set var="$category" value="{$treeEntry.record}" />
 		<xf:foreach loop="{$warnings.{$category.warning_category_id}}" value="$warningDefinition">
 				<xf:formrow label="" data-custom-title-container="1" data-warning-view-type="select" data-warning-label="{$warningDefinition.custom_title_placeholder}" data-for-warning="{$warningDefinition.warning_definition_id}">
-					<xf:if is="$warningDefinition.sv_custom_title || $warningDefinition.warning_definition_id == 0">
+					<xf:if is="$warningDefinition.sv_custom_title || !$warningDefinition.warning_definition_id">
 						<xf:textbox name="custom_title" maxlength="{{ max_length($warningDefinition, 'title') }}" value="" data-xf-init="warning-title-watcher" data-warning-title-input="1" data-for-warning="{$warningDefinition.warning_definition_id}" disabled="disabled" placeholder="{{ phrase('custom_title') }}" />
 					<xf:else />
 						<xf:hiddenval name="custom_title" data-warning-title-input="1" data-for-warning="{$warningDefinition.warning_definition_id}"></xf:hiddenval>
@@ -70,7 +70,7 @@ jQuery.extend(XF.config, {
 						<xf:radio name="warning_definition_id" value="0">
 							<xf:option value="{$warningDefinition.warning_definition_id}" class="js-FormFiller" label="{$warningDefinition.title}" data-warning-radio="true" data-warning-label="{$warningDefinition.custom_title_placeholder}" data-xf-init="warning-title-watcher">
 								<xf:dependent>
-									<xf:if is="$warningDefinition.sv_custom_title || $warningDefinition.warning_definition_id == 0">
+									<xf:if is="$warningDefinition.sv_custom_title || !$warningDefinition.warning_definition_id">
 										<xf:formrow label="" data-custom-title-container="1" data-warning-view-type="radio">
 											<xf:textbox label="" name="custom_title" maxlength="{{ max_length($warningDefinition, 'title') }}" value="{$warningDefinition.custom_title_placeholder}" data-xf-init="warning-title-watcher" data-warning-title-input="1" data-for-warning="{$warningDefinition.warning_definition_id}" />
 										</xf:formrow>
