--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info_delete.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info_delete.html
@@ -15,6 +15,13 @@
 				</xf:if>
 			</xf:inforow>
 		</div>
+
+		<xf:macro template="svWarningImprov_macros"
+				  name="sendAlert"
+				  arg-label="{{ phrase('svWarningImprov_send_alert_on_deleting_warning') }}"
+				  arg-withReason="{{ true }}"
+				  />
+
 		<xf:submitrow rowtype="simple" icon="delete" />
 	</div>
 </xf:form>
