--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
@@ -152,6 +152,12 @@
 		</xf:if>
 	</xf:if>
 
+	<xf:macro template="svWarningImprov_macros"
+			  name="sendAlert"
+			  arg-label="{{ phrase('svWarningImprov_send_alert_on_editing_warning') }}"
+			  arg-withReason="{{ true }}"
+			  />
+
 	<xf:submitrow icon="save">
 		<xf:html>
 			<xf:button href="{{ link('warnings', $warning) }}" icon="edit">{{ phrase('button.cancel') }}</xf:button>
