Tick selected content action when editing a warning

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
@@ -109,7 +109,7 @@
 		<h2 class="block-formSectionHeader"><span class="block-formSectionHeader-aligner">{{ phrase('content_action') }}</span></h2>
 		<div class="block-body">
 			<xf:radiorow name="content_action" 
-						 value=""
+						 value="{$defaultContentAction}"
 						 label="{{ phrase('content_action') }}">
 
 			<xf:option value="">{{ phrase('svWarningImprove_no_content_action') }}</xf:option>
