Fix warning title => public warning banner text copying

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
@@ -27,6 +27,7 @@
 					   value="{$warning.title}"
 					   maxlength="{{ max_length($warning, 'title') }}" 
 					   data-xf-init="warning-title-watcher"
+					   data-public-warning-selector="input[name='action_options[public][message]']"
 					   />
 	</xf:if>
 	
