Report resolving on editing a report requires Report Improvements v2.10.0+

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
@@ -140,7 +140,7 @@
 		</div>
 	</xf:if>
 		
-	<xf:if is="is_addon_active('SV/ReportImprovements') && $warning.canResolveLinkedReport()">
+	<xf:if is="is_addon_active('SV/ReportImprovements', 2100002) && $warning.canResolveLinkedReport()">
 		<xf:if contentcheck="true">
 			<h2 class="block-formSectionHeader">
 				<span class="block-formSectionHeader-aligner">{{ phrase('report') }}</span>
