--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -35,6 +35,8 @@ jQuery.extend(XF.config, {
 	</xf:foreach>
 </div>
 
+<xf:set var="$defaultSelected" value="{{ false }}"/>
+<xf:set var="$defaultWarningId" value="{{ 0 }}"/>
 <div id="warning-view-radio" style="display: none; opacity: 0;">
 	<xf:foreach loop="$categoryTree.getFlattened(0)" value="$treeEntry">
 		<xf:set var="$category" value="{$treeEntry.record}" />
@@ -67,7 +69,11 @@ jQuery.extend(XF.config, {
 
 				<xf:foreach loop="{$warnings.{$category.warning_category_id}}" value="$warningDefinition">
 					<div class="u-depth{$treeEntry.depth}">
-						<xf:radio name="warning_definition_id" value="0">
+						<xf:if is="!$defaultSelected">
+							<xf:set var="$defaultSelected" value="{{ true }}"/>
+							<xf:set var="$defaultWarningId" value="{$warningDefinition.warning_definition_id}"/>
+						</xf:if>
+						<xf:radio name="warning_definition_id" value="{{$defaultWarningId ?: 0}}">
 							<xf:option value="{$warningDefinition.warning_definition_id}" class="js-FormFiller" label="{$warningDefinition.title}" data-warning-radio="true" data-warning-label="{$warningDefinition.custom_title_placeholder}" data-xf-init="warning-title-watcher">
 								<xf:dependent>
 									<xf:if is="$warningDefinition.sv_custom_title || !$warningDefinition.warning_definition_id">
