Fix Report Improvements integration for warning edits now showing disabled reactions flag correctly

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningImprov_report_view_warning.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningImprov_report_view_warning.html
@@ -9,7 +9,7 @@
 	</dl>
 </xf:if>
 
-<xf:if is="$comment.WarningLog.sv_spoiler_contents">
+<xf:if is="$comment.WarningLog.sv_disable_reactions">
 	<dl class="pairs pairs--justified fauxBlockLink">
 		<dt>{{ phrase('sv_warning_improvements_disable_reactions') }}</dt>
 		<dd>{{ phrase('yes') }}</dd>
