Fix a warning title of > 255 characters could be entered and it would be silently truncated. Now the text fields only accept upto 255 characters, and validate that at most 255 characters is submitted

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
@@ -25,7 +25,7 @@
 		<xf:textboxrow label="{{ phrase('svWarningImprove_warning_title') }}"
 					   name="title"
 					   value="{$warning.title}"
-					   maxlength="{{ max_length($warning, 'title') }}" 
+					   maxlength="{{ max_length('XF:Warning', 'title') }}"
 					   data-xf-init="warning-title-watcher"
 					   data-public-warning-selector="input[name='action_options[public][message]']"
 					   />
