--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningImprov_macros.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningImprov_macros.html
@@ -15,3 +15,19 @@
 		</xf:option>
 	</xf:checkboxrow>
 </xf:macro>
+
+<xf:macro name="oldWarnings" arg-warningCount="!">
+	<xf:datarow rowtype="footer">
+		<xf:cell>
+			<xf:checkbox standalone="true">
+				<xf:option checked="1"
+						   label="{{ phrase('svWarningImprov_hide_x_warnings', {'x': $warningCount}) }}"
+						   data-xf-init="disabler"
+						   data-hide="true"
+						   data-invert="true"
+						   data-container=".dataList-table .dataList-row.is-old-warning"
+						   />
+			</xf:checkbox>			
+		</xf:cell>
+	</xf:datarow>
+</xf:macro>
