Only show "Hide x old warnings" phrase if there are old warnings on a user's profile to hide

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningImprov_macros.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningImprov_macros.html
@@ -17,6 +17,7 @@
 </xf:macro>
 
 <xf:macro name="oldWarnings" arg-warningCount="!">
+	<xf:if is="$warningCount > 0">
 	<xf:datarow rowtype="footer">
 		<xf:cell>
 			<xf:checkbox standalone="true">
@@ -30,4 +31,5 @@
 			</xf:checkbox>			
 		</xf:cell>
 	</xf:datarow>
+	</xf:if>
 </xf:macro>
