--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -1,16 +1,10 @@
 <xf:css src="sv_member_warn_chooser.less" />
 
+<xf:macro name="svStandardLib_macros::choices_setup" />
 <xf:js addon="SV/WarningImprovements" src="sv/warningimprovements/warnings.js" min="1" />
-<xf:js prod="vendor/select2/select2.full.js" dev="vendor/select2/select2.full.min.js" />
-
-<xf:js>
-jQuery.extend(XF.config, {
-	sv_warningimprovements_copy_title: {{ $xf.options.sv_warningimprovements_copy_title }}
-});
-</xf:js>
 
 <div id="warning-view-select" style="display: none; opacity: 0;">
-	<xf:selectrow name="warning_definition_id" class="js-FormFiller" value="0" label="{{ phrase('warning_type') }}" data-no-results-text="{{ phrase('sv_no_results_match') }}" data-place-holder-text="{{ phrase('sv_choose_a_warning') }}" data-xf-init="warning-view-select warning-title-watcher" data-warning-select="true">
+	<xf:selectrow name="warning_definition_id" class="js-FormFiller" value="0" label="{{ phrase('warning_type') }}" data-no-results-text="{{ phrase('sv_no_results_match') }}" data-place-holder-text="{{ phrase('sv_choose_a_warning') }}" data-xf-init="sv-choices warning-title-watcher" data-warning-select="true" data-copy-title="{{ $xf.options.sv_warningimprovements_copy_title }}">
 		<xf:foreach loop="$categoryTree.getFlattened(0)" value="$treeEntry">
 			<xf:set var="$category" value="{$treeEntry.record}" />
 			<xf:optgroup label="{{ repeat('--', $treeEntry.depth) }} {$category.title}">
@@ -93,8 +87,8 @@ jQuery.extend(XF.config, {
 
 <xf:formrow>
 	<a class="u-jsOnly" data-xf-init="warning-view-toggle" href="#"
-	data-select-view="#warning-view-select"
-	data-radio-view="#warning-view-radio"
-	data-toggle-select-phrase="{{ phrase('sv_toggle_select_view')|for_attr }}"
-	data-toggle-radio-phrase="{{ phrase('sv_toggle_radio_view')|for_attr }}"></a>
+	data-select-view-selector="#warning-view-select"
+	data-radio-view-selector="#warning-view-radio"
+	data-toggle-select-view-phrase="{{ phrase('sv_toggle_select_view')|for_attr }}"
+	data-toggle-radio-view-phrase="{{ phrase('sv_toggle_radio_view')|for_attr }}"></a>
 </xf:formrow>
