--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -21,27 +21,30 @@
 			   data-warning-view="select" />
 </xf:radiorow>
 
+<xf:set var="$selectViewCustomTitleRowId" value="{{ unique_id('sv_warning_view_select_custom_title_row') }}" />
+
 <div class="svWarningViewSelect">
-	<xf:selectrow name="warning_definition_id" class="js-FormFiller" value="0" label="{{ phrase('warning_type') }}" data-no-results-text="{{ phrase('sv_no_results_match') }}" data-place-holder-text="{{ phrase('sv_choose_a_warning') }}" data-xf-init="sv-choices" data-copy-title="{{ $xf.options.sv_warningimprovements_copy_title }}">
+	<xf:selectrow name="warning_definition_id" class="js-FormFiller" value="0" label="{{ phrase('warning_type') }}"
+				  data-xf-init="sv-warning-view-select"
+				  data-no-results-text="{{ phrase('sv_no_results_match') }}"
+				  data-place-holder-text="{{ phrase('sv_choose_a_warning') }}"
+				  data-copy-title="{{ $xf.options.sv_warningimprovements_copy_title }}"
+				  data-custom-title-row-selector="{{ '#' . $selectViewCustomTitleRowId }}">
 		<xf:foreach loop="$categoryTree.getFlattened(0)" value="$treeEntry">
 			<xf:set var="$category" value="{$treeEntry.record}" />
 			<xf:optgroup label="{{ repeat('--', $treeEntry.depth) }} {$category.title}">
 				<xf:foreach loop="{$warnings.{$category.warning_category_id}}" value="$warning">
-					<xf:option value="{$warning.warning_definition_id}">{{ repeat('--', $treeEntry.depth) }} {$warning.title}</xf:option>
+					<xf:option value="{$warning.warning_definition_id}"
+							   label="{{ repeat('--', $treeEntry.depth) }} {$warning.title}"
+							   data-custom-properties="{{ {'allows_custom_title': ($warning.sv_custom_title || !$warning.warning_definition_id)}|json }}" />
 				</xf:foreach>
 			</xf:optgroup>
 		</xf:foreach>
 	</xf:selectrow>
-
-	<xf:foreach loop="$categoryTree.getFlattened(0)" value="$treeEntry">
-		<xf:set var="$category" value="{$treeEntry.record}" />
-		<xf:foreach loop="{$warnings.{$category.warning_category_id}}" value="$warningDefinition">
-			<xf:if is="$warningDefinition.sv_custom_title || !$warningDefinition.warning_definition_id">
-				<xf:textboxrow name="custom_title" maxlength="{{ max_length('XF:Warning', 'title') }}"
-							   disabled="disabled" placeholder="{{ phrase('custom_title') }}" />
-			</xf:if>
-		</xf:foreach>
-	</xf:foreach>
+	
+	<xf:textboxrow rowid="{$selectViewCustomTitleRowId}" name="custom_title"
+				   maxlength="{{ max_length('XF:Warning', 'title') }}"
+				   disabled="disabled" placeholder="{{ phrase('custom_title') }}" />
 </div>
 
 <xf:set var="$defaultSelected" value="{{ false }}"/>
