Bring back warning title watcher

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
@@ -22,7 +22,7 @@
 					   name="title"
 					   value="{$warning.title}"
 					   maxlength="{{ max_length('XF:Warning', 'title') }}"
-					   data-xf-init="warning-title-watcher"
+					   data-xf-init="sv-warning-title-watcher"
 					   data-public-warning-selector="input[name='action_options[public][message]']"
 					   data-copy-title="{{ $xf.options.sv_warningimprovements_copy_title }}" />
 	</xf:if>
